[package]
name = "aoc_2021_solutions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"

[[bin]]
name = "day1_p1"
path = "Day1/main.rs"

[[bin]]
name = "day1_p2"
path = "Day1/part2.rs"

[[bin]]
name = "day2_p1"
path = "Day2/part1.rs"

[[bin]]
name = "day2_p2"
path = "Day2/part2.rs"

[[bin]]
name = "day3_p1"
path = "Day3/part1.rs"

[[bin]]
name = "day3_p2"
path = "Day3/part2.rs"

[[bin]]
name = "day4_p1"
path = "Day4/part1.rs"

[[bin]]
name = "day4_p2"
path = "Day4/part2.rs"

[[bin]]
name = "day5_p1"
path = "Day5/part1.rs"

[[bin]]
name = "day5_p2"
path = "Day5/part2.rs"

[[bin]]
name = "day6_p1"
path = "Day6/part1.rs"

[[bin]]
name = "day6_p2"
path = "Day6/part2.rs"

[[bin]]
name = "day7_p1"
path = "Day7/part1.rs"

[[bin]]
name = "day7_p2"
path = "Day7/part2.rs"

[[bin]]
name = "day8_p1"
path = "Day8/part1.rs"

[[bin]]
name = "day8_p2"
path = "Day8/part2.rs"

[[bin]]
name = "day9_p1"
path = "Day9/part1.rs"

[[bin]]
name = "day9_p2"
path = "Day9/part2.rs"

[[bin]]
name = "day10_p1"
path = "Day10/part1.rs"

[[bin]]
name = "day10_p2"
path = "Day10/part2.rs"